# Reddit_data_pipeline

./: Dockerfile  README.md  airflow.env  clean_txt.py  docker-compose.yml  pyproject.toml
dags/: reddit_dag.py
data/output/: data.csv
pipelines/: __init__.py  aws_s3_pipeline.py  reddit_pipeline.py
utils/: __init__.py  aws_etl.py  constants.py  reddit_etl.py
